src/objects/Clean_URL__c.object
<CustomObject><fields>
        <fullName>Non_Page_URL__c</fullName>
        <externalId>true</externalId>
        <label>Actual URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Page that the URL is for.</description>
        <inlineHelpText>Which Page is this for?</inlineHelpText>
        <label>Page</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipName>Clean_URLs</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Site that the URL is associated to.</description>
        <inlineHelpText>What Site is this URL associated to?</inlineHelpText>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipName>Clean_URLs</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>URL__c</fullName>
        <description>The URL that the Page should be associated with.</description>
        <inlineHelpText>What is the clean URL for this page?</inlineHelpText>
        <label>URL Name</label>
        <referenceTo>URL__c</referenceTo>
        <relationshipLabel>Site URLs</relationshipLabel>
        <relationshipName>Clean_URLs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Relationship between URL__c and Page__c records.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Site URL</label><nameField>
        <displayFormat>URL {0}</displayFormat>
        <label>URL Page Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Site URLs</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>